api-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        # envFrom:
        # - secretRef:
        #     name: ai-gateway
        imagePullPolicy: Always
        image: hritikchaudhary/demo:api
        resources:
          requests:
            memory: 300Mi
            cpu: 100m
          limits:
            memory: 1Gi
            cpu: 600m
   #   imagePullSecrets:
    #  - name: nextjs-flush
