order-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ordern
spec:
  type: NodePort
  selector:
    app: order
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 2000
      targetPort: 2000
      # Optional fi
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30090
