product-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: productn
spec:
  type: NodePort
  selector:
    app: product
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 3000
      targetPort: 3000
      # Optional fi
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30050
