user-svc1.yml
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
#  type: NodePort
  selector:
    app: user
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 4000
      targetPort: 4000
      # Optional fi
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
 #     nodePort: 30043
